--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
